feat(ai): add AI bundle and configuration for various platforms
- Register Symfony\AI\AiBundle in bundles.php for all environments.
- Create ai.yaml for AI platform configuration, including OpenAI and agent settings.
- Add chromadb store configuration in ai_chroma_db_store.yaml.
- Introduce perplexity platform configuration in ai_perplexity_platform.yaml.
- Set up HTTP discovery services in http_discovery.yaml for PSR-7 message interfaces.
- Update reference.php to include AI configuration types and defaults.
- Update symfony.lock to include new AI-related packages and their versions.

--- a/compose.yaml
+++ b/compose.yaml
@@ -57,6 +57,15 @@ services:
       # - ./docker/db/data:/var/lib/postgresql/data:rw
 ###< doctrine/doctrine-bundle ###
 
+  chromadb:
+    image: chromadb/chroma:0.5.23
+    volumes:
+      - ./chromadb:/chroma/chroma
+    environment:
+      - IS_PERSISTENT=TRUE
+      - PERSIST_DIRECTORY=/chroma/chroma # this is the default path, change it as needed
+      - ANONYMIZED_TELEMETRY=FALSE
+
 volumes:
   caddy_data:
   caddy_config:
