--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,15 @@
         "php": ">=8.4.17",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "codewithkyrian/chromadb-php": "^1.0",
         "doctrine/doctrine-bundle": "^3.2",
         "doctrine/doctrine-migrations-bundle": "^4.0",
         "doctrine/orm": "^3.6",
+        "symfony/ai-agent": "^0.3.0",
+        "symfony/ai-bundle": "^0.3.2",
+        "symfony/ai-chroma-db-store": "*",
+        "symfony/ai-perplexity-platform": "^0.3.0",
+        "symfony/ai-store": "^0.3.3",
         "symfony/asset": "8.0.*",
         "symfony/asset-mapper": "8.0.*",
         "symfony/console": "8.0.*",
