feat: Implement political news retrieval and subject management
- Add news_retriever prompt for AI analysis of political subjects.
- Configure AI agent for news retrieval using Perplexity platform.
- Create Subject entity and repository for managing political subjects.
- Implement SubjectCreateTool and SubjectLookupTool for subject management.
- Add command to retrieve latest political news and create/update subjects.
- Develop HomeController and SubjectController for displaying subjects.
- Create templates for home, subject index, and subject detail views.
- Update base layout with navigation and footer.
- Add enums for SubjectCategory and SubjectStatus to categorize subjects.
- Implement database migration for subject table creation.

feat: Add Neo4j integration with schema initialization and client service

feat: Implement Neo4j ingestion command for political persons with DTOs and mapping

feat: Integrate Symfony Messenger with Redis transport and Supervisor configuration

feat: Clear Perplexity API key in environment configuration

--- a/.env
+++ b/.env
@@ -39,3 +39,15 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&ch
 ###> symfony/ai-perplexity-platform ###
 PERPLEXITY_API_KEY=
 ###< symfony/ai-perplexity-platform ###
+
+###> neo4j ###
+NEO4J_HTTP_ENDPOINT=http://neo4j:7474
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=!ChangeMe!
+NEO4J_DATABASE=neo4j
+###< neo4j ###
+
+###> symfony/messenger ###
+MESSENGER_TRANSPORT_DSN=redis://redis:6379/messages
+MESSENGER_FAILED_TRANSPORT_DSN=redis://redis:6379/failed
+###< symfony/messenger ###
