--- a/.env.dev
+++ b/.env.dev
@@ -2,3 +2,18 @@
 ###> symfony/framework-bundle ###
 APP_SECRET=33801bc784b4b9ea26a524ef925fb1e2
 ###< symfony/framework-bundle ###
+
+
+PERPLEXITY_API_KEY=
+
+###> neo4j ###
+NEO4J_HTTP_ENDPOINT=http://neo4j:7474
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=!ChangeMe!
+NEO4J_DATABASE=neo4j
+###< neo4j ###
+
+###> symfony/messenger ###
+MESSENGER_TRANSPORT_DSN=redis://redis:6379/messages
+MESSENGER_FAILED_TRANSPORT_DSN=redis://redis:6379/failed
+###< symfony/messenger ###
