--- a/config/packages/ai_chroma_db_store.yaml
+++ b/config/packages/ai_chroma_db_store.yaml
@@ -11,5 +11,5 @@ ai:
     store:
         chromadb:
             default:
-                collection: 'my_collection'
+                collection: 'democratic_analytics'
 
