--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,9 @@
         "symfony/dotenv": "8.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "8.0.*",
+        "symfony/http-client": "8.0.*",
+        "symfony/messenger": "8.0.*",
+        "symfony/redis-messenger": "8.0.*",
         "symfony/runtime": "8.0.*",
         "symfony/twig-bundle": "8.0.*",
         "symfony/ux-live-component": "^2.32",
