--- a/config/packages/ai.yaml
+++ b/config/packages/ai.yaml
@@ -1,27 +1,10 @@
 ai:
-    platform:
-        # Inference Platform configuration
-        # see https://github.com/symfony/ai/tree/main/src/platform#platform-bridges
-
-        # openai:
-        #    api_key: '%env(OPENAI_API_KEY)%'
-
     agent:
-        # Agent configuration
-        # see https://symfony.com/doc/current/ai/bundles/ai-bundle.html
-
-        # default:
-        #    platform: 'ai.platform.openai'
-        #    model: 'gpt-5-mini'
-        #    prompt: |
-        #        You are a pirate and you write funny.
-        #    tools:
-        #        - 'Symfony\AI\Agent\Bridge\Clock\Clock'
-
-    store:
-        # Store configuration
-
-        # chromadb:
-        #    default:
-        #        client: 'client.service.id'
-        #        collection: 'my_collection'
+        news_retriever:
+            platform: 'ai.platform.perplexity'
+            model: 'sonar-pro'
+            prompt:
+                file: '%kernel.project_dir%/config/ai/prompts/news_retriever.md'
+            tools:
+                - 'App\AI\Tool\SubjectLookupTool'
+                - 'App\AI\Tool\SubjectCreateTool'
